# fsahnc-bot

./: .dockerignore  Dockerfile  config.yml  docker-compose.yaml  lichess-bot.py  pyproject.toml  strategies.py  tox.ini
engines/: __init__.py  bigpp.py  engine_wrapper.py  example.py  minimal.py
