[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Arjun Gandhi", email = "contact@arjungandhi.com"},
]
dependencies = ["chess==1.9.2", "PyYAML==6.0", "requests==2.28.1", "backoff==2.1.2", "rich==12.5.1", "pytest==7.1.3", "pytest-timeout==2.1.0"]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]

[tool.pdm.scripts]
start = "python lichess-bot.py -v"

[tool.pdm.dev-dependencies]
dev = [
    "flake8>=5.0.4",
    "black>=22.8.0",
]
